--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -107,6 +107,11 @@
         &nbsp;
          <button mat-raised-button right class="me-8 mb-8" color="warn" (click)="deleteUser()">Delete User</button> 
 
+         <div role="alert"  *ngIf="error.length > 0" class="alert alert-danger alert-text-danger align-items-center d-flex fs-14 mb-16 rounded ng-star-inserted"><i-feather _nghost-dto-c11="" class="feather-base me-12 text-danger" ng-reflect-name="alert-circle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather feather-alert-circle">
+          <line x1="12" y1="16" x2="12.01" y2="16"  ></line>
+          </svg></i-feather> {{error}} 
+        </div>
+
       </form>
     </div>
   </div>
