--- a/src/app/components/vm-details/vm-details.component.html
+++ b/src/app/components/vm-details/vm-details.component.html
@@ -112,7 +112,11 @@
                 </mat-radio-group>
                 
           
-                <button mat-button class="btn btn-info fw-normal" (click)="createVM()"  [disabled]="vmForm.invalid" type="submit">Submit</button>
+                <button mat-button class="btn btn-info fw-normal" (click)="createVM()"  [disabled]="vmForm.invalid" type="submit">Submit</button><br>
+                <div role="alert"  *ngIf="error.length > 0" class="alert alert-danger alert-text-danger align-items-center d-flex fs-14 mb-16 rounded ng-star-inserted"><i-feather _nghost-dto-c11="" class="feather-base me-12 text-danger" ng-reflect-name="alert-circle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather feather-alert-circle">
+                  <circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line>
+                  </svg></i-feather> {{error}} 
+                </div>
         
               </form>
 
@@ -165,13 +169,16 @@
                 <mat-label>Comments</mat-label>
                 <textarea matInput rows="6" placeholder="Enter Instructions" value="Login using regular RDP"></textarea>
               </mat-form-field>
-              <button mat-button class="btn btn-info fw-normal" (click)="assignvmtoUser()" >Submit</button>
-        </form>
+
+              <button mat-button class="btn btn-info fw-normal" (click)="assignvmtoUser()" >Submit</button><br>
+
+              <div role="alert"  *ngIf="error.length > 0" class="alert alert-danger alert-text-danger align-items-center d-flex fs-14 mb-16 rounded ng-star-inserted"><i-feather _nghost-dto-c11="" class="feather-base me-12 text-danger" ng-reflect-name="alert-circle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="feather feather-alert-circle">
+                <circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line>
+                </svg></i-feather> {{error}} 
+              </div>
+             </form>
             </mat-expansion-panel>
           </mat-accordion>
-
-
-
     </mat-card-content>
 </mat-card>
   
