--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -21,9 +21,12 @@
         
         <mat-form-field class="w-75 fs-16" appearance="outline">
           <mat-label>First Name</mat-label>
-          <input matInput type="text" placeholder="Enter user's FirstName" [value]="ud.firstName" formControlName="firstName"/>
+          <input matInput type="text" placeholder="Enter user's FirstName" maxlength="30" [value]="ud.firstName" formControlName="firstName"/>
           <mat-error *ngIf="firstName?.errors?.['required']">
             FirstName is required
+          </mat-error>
+          <mat-error *ngIf="firstName?.errors?.['pattern']">
+            Only alphabets allowed
           </mat-error>
         </mat-form-field>
 
@@ -53,12 +56,12 @@
         
         <mat-form-field class="w-75 fs-16" appearance="outline">
           <mat-label>Contact Number</mat-label>
-          <input matInput type="number" placeholder="Enter user's contact number"  formControlName="phone"/>
+          <input matInput type="text" placeholder="Enter user's contact number" maxlength="10" formControlName="phone"/>
           <mat-error *ngIf="phone?.errors?.['required']">
             Contact number is required
           </mat-error>
           <mat-error *ngIf="phone?.errors?.['pattern']">
-            Please enter a valid mobile number
+            Mobile number is not 10 digit
           </mat-error>
         </mat-form-field>
 
