--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -46,7 +46,13 @@
 
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Contact Number</mat-label>
-          <input matInput type="email" placeholder="Enter Contact Number" formControlName="phone" [readonly]="!isEdit">
+          <input matInput type="text" placeholder="Enter Contact Number" maxlength="10" formControlName="phone" [readonly]="!isEdit">
+          <mat-error *ngIf="phone?.errors?.['required']">
+            Contact number is required
+          </mat-error>
+          <mat-error *ngIf="phone?.errors?.['pattern']">
+            Mobile number is not 10 digit
+          </mat-error>
         </mat-form-field>
   
         <mat-form-field class="w-100 fs-16" appearance="outline">
