--- a/src/app/time-sheet/time-sheet.component.html
+++ b/src/app/time-sheet/time-sheet.component.html
@@ -57,11 +57,7 @@
   </table>
 </div>
 <div>
-<!-- <button class="btn btn-primary float-right" float-right (click)="update(sheetList)">
-  Save
-</button></div> -->
-<div>{{sheetList.task}}</div>
-<!-- <td>  <button  class="btn btn-primary active" (click)="update(event)">Save</button> </td> -->
 
+<!-- <div>{{sheetList.task}}</div> -->
 
                                   
