--- a/src/app/components/approve-timesheet/approve-timesheet.component.html
+++ b/src/app/components/approve-timesheet/approve-timesheet.component.html
@@ -1,1 +1,84 @@
-<p>approve-timesheet works!</p>
+<h2>Approve Time Sheet</h2>
+
+<h3 style="color:blue;">   
+  <!-- <button class="btn btn-primary float-right"  >Date Picker:<input type="date" name="myDate" (change)="selectDate()" ></button> -->
+  <mat-form-field style="float: right;">
+    <input matInput [matDatepicker]="picker" [(ngModel)]="curDate" [max]="maxDate" placeholder="Choose a date" (dateChange)="onChangeEvent($event)" >
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker ></mat-datepicker>
+  </mat-form-field>  
+  <div class="clearfix"></div>  
+ 
+  
+</h3>
+
+<button class="btn btn-primary float-right" (click)="approve(approveSheetList)" >Approve</button>
+<br/><br/><br/>
+<div class="table-responsive">
+  <table class="table table-bordered">
+    <thead class="headerstyle">
+      <tr>                
+        <th>Select</th>        
+        <th>Task</th>
+        <th>Description</th>
+        <th>Hours</th>  
+       
+      </tr>
+    </thead>
+    <tbody>      
+
+      <tr *ngFor="let list of approveSheetList">                  
+<!-- <td><input type="checkbox" value="Select All"   [value]="list.id" [(ngModel)]="selectAllItems" (change)="selectAllLineItem($event)"></td> -->
+<td><input  type="checkbox"  [checked]="list.selected"  [disabled]="list.status == 'Approved'"   value="{{list.id}}" (change)="onCheckboxChange($event)"/></td>
+
+
+
+        <td>
+          <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="list.task"
+            (keyup)="refresh.next()"
+            [disabled]="true"
+          />
+        </td>
+        <td>  <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="list.description"
+          (keyup)="refresh.next()"
+          [disabled]="true"
+        /></td>
+        <td><input
+          type="text"
+          class="form-control"
+          [(ngModel)]="list.hours"
+          (keyup)="refresh.next()"
+          [disabled]="true"
+        />
+        </td>       
+      </tr>      
+    </tbody>    
+  </table>
+</div>
+<div>
+    <!-- <div>
+        <button type="submit" value="Submit" class="btn btn-primary active" style="margin-left: 50px;" (click)="checkAll()">Select All</button> 
+              
+        <button type="submit" value="Submit" class="btn btn-danger" style="margin-right: 5px;" (click)="uncheckAll()">Deselect All</button>
+      
+      </div> -->
+
+      <div style="float: right;">
+        <button type="submit" value="Submit" class="btn btn-primary active" style="margin-left: 50px;" (click)="checkAll()">Select All</button> 
+        <div class="space">
+        </div>
+        <button type="submit" value="Submit" class="btn btn-danger" style="margin-right: 5px;" (click)="uncheckAll()">Deselect All</button>
+      </div>
+
+
+
+      
+<!-- <div>{{sheetList.task}}</div> -->
+ 
+                                  
