--- a/src/app/components/applyleave/applyleave.component.html
+++ b/src/app/components/applyleave/applyleave.component.html
@@ -1,87 +1,7 @@
-<!-- Form Layout -->
 <mat-card>
     <mat-card-content>
-        <mat-accordion>
-
-
-            <!-- View available VMs -->
-            <mat-expansion-panel  (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-                <mat-expansion-panel-header>
-            <!--    <mat-panel-title> View available VMs </mat-panel-title> -->
-                <mat-panel-description> List of Applied Leaves
-                  <!-- <mat-icon>account_circle</mat-icon> -->
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              
-              <div class="table-responsive">
-                <table mat-table [dataSource]="dataleave" class="text-nowrap w-100">
-          
-                  <!-- Id Column -->
-                  <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef>Leave type</th>
-                    <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.leavetype}} </td>
-                  </ng-container>
-
-                  <ng-container matColumnDef="reason">
-                    <th mat-header-cell *matHeaderCellDef>Leave Reason</th>
-                    <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.leavereason}} </td>
-                  </ng-container>
-          
-                  <!-- Project Column -->
-                  <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef>From Date</th>
-                    <td mat-cell *matCellDef="let element">
-                      <p class="mb-0 fw-medium">{{element.datefrom}}</p>
-                    </td>
-                  </ng-container>
-          
-                  <!-- Priority Column -->
-                  <ng-container matColumnDef="isActive">
-                    <th mat-header-cell *matHeaderCellDef> To Date </th>
-                    <td mat-cell *matCellDef="let element">                      
-                        <p class="mb-0 fw-medium ">{{element.dateto}}</p>
-                        <!-- <span class="badge {{element.isActive}} rounded-pill">{{element.isActive}</span> -->
-                    </td>
-                  </ng-container>
-        
-                   <!-- view Column -->
-                   <ng-container matColumnDef="user">
-                    <th mat-header-cell *matHeaderCellDef>Status</th>
-                    <td mat-cell *matCellDef="let element">
-                      <p class="mb-0 fw-medium">{{element.status}}</p>
-                      <!-- <button mat-raised-button class="me-1 mb-1" (click)="onView()" color="primary">View</button> -->
-                    </td>
-                  </ng-container>
-
-                  <ng-container matColumnDef="delete">
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element">
-                     <!-- <button mat-raised-button class="me-1 mb-1" color="primary">Delete</button>-->
-                    </td>
-                  </ng-container>
-          
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-              </div><br>
-             
-              <!-- <button mat-button class="btn btn-info fw-normal" (click)="onCreate()"  >Add VM</button> -->
-            </mat-expansion-panel>
-
-
-
-            <!-- add VM -->
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-               <!-- <mat-panel-title> Add a VM </mat-panel-title>  -->
-                <mat-panel-description>Apply Leave</mat-panel-description>
-              </mat-expansion-panel-header>
-              
-              
-               <form [formGroup]="leaveform" >
-
-        
-     
+        <h4 class="mb-16">Apply Leave</h4>
+         <form [formGroup]="leaveform" >
         <mat-form-field class="w-75 fs-16"  appearance="outline">
             <mat-label>Leave type</mat-label>
             <mat-select formControlName="leavetype" placeholder="Select leave type" >
@@ -101,6 +21,17 @@
             Leave reason is required
           </mat-error>
         </mat-form-field>
+
+        <mat-form-field class="w-75 fs-16" appearance="outline">
+            <mat-label>Leave days</mat-label>
+            <input matInput type="number" min="1"   formControlName="days">
+            <mat-error *ngIf="days?.errors?.['required']">
+                date from is required
+            </mat-error>
+            <mat-error *ngIf="days?.errors?.['max']">
+                Maximum 8 days
+              </mat-error>
+          </mat-form-field>
        
         <mat-form-field class="w-75 fs-16"  appearance="outline">
           <mat-label>Date from</mat-label>
@@ -126,11 +57,5 @@
 
       </form>
 
-
-              
-            
-           
-    </mat-expansion-panel>
-          </mat-accordion>
     </mat-card-content>
 </mat-card>
