--- a/src/app/components/time-sheet/time-sheet.component.html
+++ b/src/app/components/time-sheet/time-sheet.component.html
@@ -1,8 +1,7 @@
-<h2>Time Sheet</h2>
+<h3>Time Sheet</h3>
 
-<h3 style="color:blue;">   
-  <!-- <button class="btn btn-primary float-right"  >Date Picker:<input type="date" name="myDate" (change)="selectDate()" ></button> -->
-  <mat-form-field style="float: right;">
+<h4 style="color:blue;">   
+    <mat-form-field style="float: right;">
     <input matInput [matDatepicker]="picker" [(ngModel)]="curDate" [max]="maxDate" placeholder="Choose a date" (dateChange)="onChangeEvent($event)" >
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker ></mat-datepicker>
@@ -10,11 +9,11 @@
   <div class="clearfix"></div>  
  
   
-</h3>
+</h4>
 <button class="btn btn-primary float-right" (click)="addEvent()">
   Add new
 </button>
-<br/><br/><br/>
+<br/>
 <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
@@ -22,6 +21,7 @@
         <th>Task</th>
         <th>Description</th>
         <th>Hours</th>  
+        <th>Status</th>
         <th colspan="2">Action</th>   
       </tr>
     </thead>
@@ -44,14 +44,17 @@
           (keyup)="refresh.next()"
           [disabled]="list.status == 'Approved'"
         /></td>
-        <td><input
-          type="text"
+        <td><input          
           class="form-control"
           [(ngModel)]="list.hours"
           (keyup)="refresh.next()"
           [disabled]="list.status == 'Approved'"
+          type="number"  min=0 max=12  
         />
-        </td>   
+        </td>  
+        <td>
+          {{list.status}}
+        </td> 
         <td> <button  class="btn btn-primary active" [disabled]="list.status == 'Approved'" (click)="update(list)">Save</button> </td>
         <td><button id="remove" class="btn btn-danger" [disabled]="list.status == 'Approved'" (click)="delete(list.id)">Delete</button></td>          
       </tr>
@@ -61,6 +64,5 @@
 </div>
 <div>
 
-<!-- <div>{{sheetList.task}}</div> -->
 
                                   
